Actual patchful/restful patch calls (#38)
* Actual REST calls for PATCH

* comment out app.run

* actually return GUID as promised

* potentially added CORS support

* CORS app.app fix

* add flask-cors requirement
